# clyde

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql.yml  tox.yml
clyde/: __init__.py  _constants.py  application.py  command_spec.py  interaction_handler.py
clyde/http/: __init__.py  client.py  middleware.py  payload.py  server.py
clyde/internal/: json.py
clyde/models/: __init__.py  application.py  command.py  interactions.py  locale.py  messages.py  permissions.py  snowflake.py  team.py  users.py
clyde/types/: snowflake.py
examples/: chat_input.py  simple.py
tests/models/: test_application.py  test_interactions.py  test_locale.py  test_snowflake.py  test_users.py
tests/models/data/: application.json  guild_member.json  message_component.json  ping_interaction.json  select_menu_message_component.json  slash_command.json
tests/types/: test_snowflake.py
