[metadata]
name = clyde
version = attr: clyde.__version__
author = Sparta142
author_email = Sparta142@users.noreply.github.com
description = Library for developing Discord application commands
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
packages = find:
