[metadata]
name = clyde
version = attr: clyde.__version__
license = MIT
url = https://github.com/Sparta142/clyde
author = Sparta142
author_email = Sparta142@users.noreply.github.com
description = Library for developing Discord application commands
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.9
packages =
    clyde
    clyde.http
    clyde.types
install_requires =
    aiohttp>=3.7
    PyNaCl>=1.4
