[metadata]
name = clyde
version = attr: clyde.__version__
license = MIT
url = https://github.com/Sparta142/clyde
author = Sparta142
author_email = Sparta142@users.noreply.github.com
description = Library for developing Discord application commands
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.7
packages = find:
install_requires =
    aiohttp>=3.8.1
    pydantic>=1.9.0
    PyNaCl>=1.5.0
    typing_extensions>=4.3.0; python_version<'3.9'

[options.extras_require]
speedups =
    aiohttp[speedups]>=3.8.1
    orjson>=3.7.7
